[package]
name = "fff_derive"
version = "0.3.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Procedural macro library used to build custom prime field implementations"
documentation = "https://docs.rs/fff-derive/"
homepage = "https://github.com/filecoin-project/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/ff"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
addchain = "0.2"
byteorder = { version = "1", default-features = false }
num-bigint = "0.3"
num-traits = "0.2"
num-integer = "0.1"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", default-features = false }
syn = "1"

[badges]
maintenance = { status = "passively-maintained" }
